# PAT.AI.AGENTS

./: .flake8  .gitignore  Project.Structure.txt  README.md  Run_tests_commands.txt  lint.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.old
archive/: config.old  config.old2  containers.txt  main.old  main.old2
crew/: financial_analysis_crew.yaml  prompt_analysis_crew.yaml
src/: agent_manager.py  config.py  config.yaml  config_loader.py  containers.py  crew_runner.py  dependencies.py  embedding_manager.py  error_handling.py  exceptions.py  logging_config.py  main.py  search_tool.py  sec_tools.py  task_manager.py  utils.py
templates/: confluence_prompt_page.md  prompt_analyzer_prompt.txt
tests/: conftest.py
tests/e2e/: test_main.py
tests/integration/: test_search_tool.py  test_sec_tools.py
tests/unit/: test_agent_manager.py  test_crew_runner.py  test_task_manager.py
